spacing issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,6 @@ hr{
 }
 
 #player1{
-    margin-top: 5%;
     border: 2px solid white;
     background-color: rgba(127, 255, 212, 0.555);
     padding: 20px;
@@ -29,7 +28,6 @@ hr{
 }
 
 #info{
-    margin-top: 5%;
     border: 2px solid white;
     background-color: rgba(220, 20, 60, 0.521);
     padding: 83px;
@@ -39,7 +37,6 @@ hr{
 }
 
 #player2{
-    margin-top: 5%;
     border: 2px solid white;
     background-color: rgba(238, 130, 238, 0.445);
     padding: 20px;
